# psypheno

./: .gitignore  .pylintrc  README.md  TODOs.md  TODOs.txt  deploy-dev.sh  deploy-int.sh  deploy-prod.sh  deploy.sh  gene_plan.md  sprint-recap-2026-04-27-to-2026-05-06.md  wrangler_gene_cleanup.md
processing/: Test.ipynb  llm_jobs.yaml  pyproject.toml  run_llm_search.py
processing/.claude/: settings.json
processing/scripts/: build_test_fixture.py  pvalue_distribution_audit.py  pvalue_filter_experiment.py
processing/src/processing/: build_gencode_clone_map.py  central_gene_table.py  combined_pvalues.py  config.json  config.py  deploy.py  effect_distributions.py  ensembl_symbol_table.py  entrez_gene_maps.py  exports.py  gene_descriptions.py  llm_search.py  my_logger.py  new_sqlite3.py  notify_wranglers.py  preprocess_local.py  pull_data.py  push_data.py  rsync_dataset.py  run_llm_search.py  shared_inputs.py  split_column_entry.py  sq_load.py  sql_utils.py  sym_resolve.py  sync_data.py  table_to_process_config.py  test_fixture_genes.json
processing/src/processing/click/: full_help_group.py  main.py
processing/src/processing/combined_pvalues/: __init__.py  collection.py  data.py  flags.py  groups.py  r_cache.py  r_runner.py  runner.py  writer.py
processing/src/processing/preprocessing/: README.md  __init__.py  dataframe.py  ensembl_index.py  gencode_clone_index.py  helpers.py  pipeline.py  steps.py  symbol_index.py
processing/src/processing/r/: compute_combined.R
processing/src/processing/types/: data_load_result.py  ensembl_gene.py  entrez_conversion.py  entrez_gene.py  entrez_gene_entry.py  entrez_gene_map.py  gene_mapping.py  link_table.py  mgi_accession_id.py  split_column_entry.py  table_to_process_config.py
processing/tests/: conftest.py  test_central_gene_table.py  test_cli.py  test_combined_pvalues.py  test_config.py  test_deploy.py  test_deploy_prod_warning.py  test_deploy_transport.py  test_ensembl_symbol_table.py  test_exports.py  test_new_sqlite3.py  test_promote_dev_to_prod.py  test_push_data.py  test_r_cache.py  test_rsync_dataset.py  test_run_llm_search_ctrl_c.py  test_shared_inputs.py  test_sq_load_integration.py  test_sql_utils.py
processing/tests/data_correspondence/: README.md  conftest.py  helpers.py  test_meta_analysis_correspondence.py  test_row_accounting.py  test_sidecar_vs_files.py  test_value_correspondence.py
processing/tests/fixtures/: side-config-template.json
processing/tests/fixtures/mini-dataset/: globals.yaml
processing/tests/preprocessing/: conftest.py  test_dataframe.py  test_ensembl_index.py  test_helpers.py  test_pipeline.py  test_symbol_index.py
processing/tests/preprocessing/fixtures/: hgnc_stub.txt  (+3 more)
processing/tests/processing_types/: test_gene_mapping.py
(+464 files in other folders)
